# sql-code-scanner

./: .gitignore  README.md
code_builder/architecture/: 00-master-system-design.md  01-zpa-core.md  02-zpa-checks.md  03-zpa-checks-testkit.md  04-sonar-zpa-plugin.md  05-zpa-toolkit.md  06-plsql-custom-rules.md  07-python-port-feasibility.md  08-python-mvp.md
code_builder/initial_concept/: zpa-codebase-overview.md
pyzpa/: README.md  pyproject.toml
pyzpa/ci-cd/: README.md  build.ps1  build.sh  publish.ps1  publish.sh  pypirc.example  stamp_dev_version.py
pyzpa/ci-cd/github-workflows/: ci.yml  nightly-testpypi.yml  publish-pypi.yml
pyzpa/docs/: getting-started.md
pyzpa/examples/: basic_usage.py
pyzpa/oneshot/: pyzpa_oneshot.py
pyzpa/pyzpa/: __init__.py  __main__.py  analyzer.py  cli.py  registry.py
pyzpa/pyzpa/analysis/: __init__.py  context.py  file.py  metrics.py  scanner.py  walker.py
pyzpa/pyzpa/api/: __init__.py  check.py  decorators.py  issue.py  nodes.py
pyzpa/pyzpa/ast/: __init__.py  nodes.py
pyzpa/pyzpa/checks/: __init__.py  comparison_with_null.py  empty_block.py  select_all_columns.py  todo_comment.py
pyzpa/pyzpa/grammar/: plsql.lark
pyzpa/pyzpa/parser/: __init__.py  ast_builder.py  comments.py  parser.py
pyzpa/pyzpa/report/: __init__.py  csv_writer.py  json_writer.py  sarif_writer.py  text_writer.py
pyzpa/tests/: test_analyzer.py  test_checks.py  test_cli.py  test_csv_report.py  test_parser.py  verifier.py
pyzpa/tests/fixtures/: comparison_with_null.sql  empty_block.sql  select_all_columns.sql  todo_comment.sql
